force-app/main/default/objects/Object_Merge_Pair__c/Object_Merge_Pair__c.object-meta.xml
<CustomObject>
    <description>Pair of object records that are merged.</description>
    <label>Object Merge Pair</label>
    <nameField>
        <displayFormat>OMP-{0000000}</displayFormat>
        <label>Object Merge Pair Numer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Merge Pairs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>