force-app/main/default/objects/Object_Merge_Pair__c/fields/Error_Reason__c.field-meta.xml
<CustomField>
    <fullName>Error_Reason__c</fullName>
    <description>Reason for an &quot;Error&quot; status.</description>
    <inlineHelpText>Reason for an &quot;Error&quot; status.</inlineHelpText>
    <label>Error Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>