force-app/main/default/objects/Object_Merge_Pair__c/fields/Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_ID__c</fullName>
    <description>ID of the record that is merged into.</description>
    <inlineHelpText>ID of the record that is merged into.</inlineHelpText>
    <label>Master ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>