force-app/main/default/objects/Object_Merge_Pair__c/fields/Merge_Date__c.field-meta.xml
<CustomField>
    <fullName>Merge_Date__c</fullName>
    <description>Date/time the merge was attempted/completed.</description>
    <inlineHelpText>Date/time the merge was attempted/completed.</inlineHelpText>
    <label>Merge Date</label>
    <type>DateTime</type>
</CustomField>