force-app/main/default/objects/Object_Merge_Pair__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the merge operation.</description>
    <inlineHelpText>Status of the merge operation.</inlineHelpText>
    <label>Status</label>
    <picklist>
        <picklistValues>
            <fullName>Merged</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Error</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Retry</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>