force-app/main/default/objects/Object_Merge_Pair__c/fields/Victim_ID__c.field-meta.xml
<CustomField>
    <fullName>Victim_ID__c</fullName>
    <description>ID of the record that is getting merged.</description>
    <inlineHelpText>ID of the record that is getting merged.</inlineHelpText>
    <label>Victim ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>