force-app/main/default/objects/Object_Merge_Pair__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Master_ID__c</columns>
    <columns>Victim_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Merge_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>