force-app/main/default/objects/Object_Merge_Pair__c/listViews/Errors.listView-meta.xml
<ListView>
    <fullName>Errors</fullName>
    <columns>NAME</columns>
    <columns>Master_ID__c</columns>
    <columns>Victim_ID__c</columns>
    <columns>Merge_Date__c</columns>
    <columns>Error_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Errors</label>
</ListView>