force-app/main/default/objects/Object_Merge_Pair__c/listViews/Merged.listView-meta.xml
<ListView>
    <fullName>Merged</fullName>
    <columns>NAME</columns>
    <columns>Master_ID__c</columns>
    <columns>Victim_ID__c</columns>
    <columns>Merge_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Merged</value>
    </filters>
    <label>Merged</label>
</ListView>